tests/diff/diff.exp
Error: intersection.js:9
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^^^^^^^^^^ intersection. This type is incompatible with
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^ object type
  Member 1:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                      ^^^^^^^^^^^^ property `a`. Property not found in
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type
  Member 2:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                      ^^^^^^^^^^^^ property `a`. Property not found in
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type

Error: intersection.js:12
 12: ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
                           ^^^^^^ property `a`. Property not found in
 12: ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
            ^^^^^^ object type

Error: intersection.js:14
 14: ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
                           ^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
 14: ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
            ^^^^^^ object type

Error: undefined.js:8
  8: ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                           ^^^^^^^^^^^^ property `a`. Property not found in
  8: ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^ object type

Error: undefined.js:10
 10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^^^^^^^^^^ object type. This type is incompatible with
 10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^ object type
  Property `a` is incompatible:
     10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                    ^^^^ undefined. This type is incompatible with
     10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                            ^ A

Error: undefined.js:10
 10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^^^^^^^^^^ object type. This type is incompatible with
 10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^ object type
  Property `a` is incompatible:
     10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                            ^ A. This type is incompatible with
     10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                    ^^^^ undefined

Error: union.js:10
 10: ((any: {a: A, c: C}): $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>); // Error
                                 ^^^^^^^^^^^^^^^^^^ property `b`. Property not found in
 10: ((any: {a: A, c: C}): $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>); // Error
            ^^^^^^^^^^^^ object type

Error: union.js:11
 11: ((any: {b: B, c: C}): $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>); // Error
                                 ^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
 11: ((any: {b: B, c: C}): $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>); // Error
            ^^^^^^^^^^^^ object type


Found 8 errors
